Implemented the approved callable-signature and reflection slice. Key results: • Added immutable language-owned callable metadata in CallableSignature.java. • @function now exposes name, remaining, signature, and variants. • Metadata covers parameters, results, effects, and generalized variables. • Prefix partials specialize signatures. • Compositions union invocation effects. • Overloads expose conservative summaries and surviving variant signatures. • Reflection remains non-callable and does not expose captures, bound values, implementation objects, or authority. • Added unit tests and runnable callable_reflection.caret. • Updated LANGUAGE.md, PLAN.md, CONFORMANCE.md, README.md, and WEB_INTRODUCTION.md.